Added date field to table

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="col">
       <h2>UbuCon's bring the global Ubuntu community together!</h2>
-      <p>UbuCons, shorthand for Ubuntu Conventions, are gatherings of Ubuntu users, enthusiasts adovcates and devlopers.</p>
+      <p>UbuCons, shorthand for Ubuntu Conventions, are gatherings of Ubuntu users, enthusiasts, adovcates and devlopers.</p>
     </div>
   </div>
 </section>
@@ -72,6 +72,7 @@
         <thead>
             <tr>
                 <th>Event Name</th>
+                <th>Date</th>
                 <th>Location</th>
                 <th>URL</th>
             </tr>
@@ -111,6 +112,7 @@
                     const coordinates = event.coordinates;
                     const eventName = event.event;
                     const address = event.address;
+                    const address = event.date;
                     const url = event.url;
 
                     // Add marker to the map using custom icon
@@ -139,7 +141,7 @@
 
           <div class="p-notification">
             <p class="p-notification__content">
-              Do you need your UbuCon event listed? Check out this quick guide on our <a href="https://github.com/aaronprisk/ubucon.org">GitHub</a>.
+              Do you need your UbuCon event listed? Check out the quick guide on our <a href="https://github.com/aaronprisk/ubucon.org">GitHub</a>.
             </p>
           </div>
         </div>
