--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     const coordinates = event.coordinates;
                     const eventName = event.event;
                     const address = event.address;
-                    const address = event.date;
+                    const date = event.date;
                     const url = event.url;
 
                     // Add marker to the map using custom icon
