--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     const eventRow = document.createElement('tr');
                     eventRow.innerHTML = `
                         <td>${eventName}</td>
+                        <td>${date}</td>
                         <td>${address}</td>
                         <td><a href="${url}" target="_blank">More info</a></td>
                     `;
