--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 // Fetch events.json file
                 const response = await fetch('events.json');
                 const eventsData = await response.json();
+                var eventCoordinates = [];
 
                 // Iterate over events
                 eventsData.forEach(event => {
@@ -115,6 +116,8 @@
                     const address = event.address;
                     const date = event.date;
                     const url = event.url;
+
+                    eventCoordinates.push(coordinates);
 
                     // Add marker to the map using custom icon
                     L.marker(coordinates, { icon: customIcon }).addTo(map)
@@ -130,6 +133,13 @@
                     `;
                     document.getElementById('eventTable').getElementsByTagName('tbody')[0].appendChild(eventRow);
                 });
+                // Calculate bounds and set map view
+                if(eventCoordinates.length > 0) {
+                    var bounds = L.latLngBounds(eventCoordinates);
+                    map.fitBounds(bounds);
+                } else {
+                    map.setView([0, 0], 2); // Fallback view
+                }
             } catch (error) {
                 console.error('Error loading events.json:', error);
             }
