--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="col">
       <h2>UbuCon's bring the global Ubuntu community together!</h2>
-      <p>UbuCons, shorthand for Ubuntu Conventions, are gatherings of Ubuntu users, enthusiasts, adovcates and devlopers.</p>
+      <p>UbuCons, shorthand for Ubuntu Conventions, are gatherings of Ubuntu users, enthusiasts, advocates and developers.</p>
     </div>
   </div>
 </section>
