Much marketing very wow

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     </div>
                     <div class="col">
                         <h2>UbuCon's bring the global Ubuntu community together!</h2>
-                        <p>UbuCons, shorthand for Ubuntu Conventions, are gatherings of Ubuntu users, enthusiasts, advocates and developers.</p>
+                        <p>
+                            An Ubuntu conference, often abbreviated to ‘UbuCon’, is a volunteer run, regional event that enables the global community of Ubuntu teams, users, and organizations to come together to work on current challenges, share knowledge, and network within the Ubuntu project. Ubuntu conferences occur across the globe; recent events include UbuCon Asia 2023, UbuCon Korea, Ubuntu Meetup Africa 2023, UbuCon Latin America, and the Ubuntu Summit.
+                        </p>
                     </div>
                 </div>
             </section>
