Minor grammar fixes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <img src="img/community.png?h=300" alt="">
                     </div>
                     <div class="col">
-                        <h2>UbuCon's bring the global Ubuntu community together!</h2>
+                        <h2>UbuCons bring the global Ubuntu community together!</h2>
                         <p>
-                            An Ubuntu conference, often abbreviated to ‘UbuCon’, is a volunteer run, regional event that enables the global community of Ubuntu teams, users, and organizations to come together to work on current challenges, share knowledge, and network within the Ubuntu project. Ubuntu conferences occur across the globe; recent events include UbuCon Asia 2023, UbuCon Korea, Ubuntu Meetup Africa 2023, UbuCon Latin America, and the Ubuntu Summit.
+                            An Ubuntu Conference (often abbreviated to "UbuCon") is a volunteer run, regional event that enables the global community of Ubuntu teams, users, and organizations to come together to work on current challenges, share knowledge, and network within the Ubuntu project. Ubuntu Conferences occur across the globe; recent events include UbuCon Asia 2023, UbuCon Korea, Ubuntu Meetup Africa 2023, UbuCon Latin America, and the Ubuntu Summit.
                         </p>
                     </div>
                 </div>
