--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <div class="l-docs__sidebar">
                         <div class="p-navigation__banner">
                             <div class="p-navigation__tagged-logo">
-                                <a class="p-navigation__link" href="#">
+                                <a class="p-navigation__link" href="ubucon.org">
                                     <div class="p-navigation__logo-tag">
                                         <img class="p-navigation__logo-icon" src="https://assets.ubuntu.com/v1/82818827-CoF_white.svg" alt="">
                                     </div>
@@ -29,11 +29,8 @@
                         <div class="p-navigation__row u-fixed-width">
                             <nav class="p-navigation__nav" aria-label="Example main">
                                 <ul class="p-navigation__items">
-                                    <li class="p-navigation__item">
-                                        <a class="p-navigation__link" href="#">About UbuCon</a>
-                                    </li>
                                     <li class="p-navigation__item is-selected">
-                                        <a class="p-navigation__link" href="#">Find an UbuCon</a>
+                                        <a class="p-navigation__link" href="#">UbuCon</a>
                                     </li>
                                 </ul>
                             </nav>
