--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="title" content="UbuCon - Celebrating the global Ubuntu community">
+        <meta name="description" content="UbuCons are community led events that bring together Ubuntu teams, users, and organizations from around the world.">
+        <meta name="keywords" content="ubucon,ubuntu">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="English">
+        <meta property="og:title" content="UbuCon" />
+        <meta property="og:description" content="UbuCons are community led events that bring together Ubuntu teams, users, and organizations from around the world." />
+        <meta property="og:image" content="img/map-thumbnail.png" />
         <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.5.1.min.css" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
