--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="l-docs__sidebar">
                         <div class="p-navigation__banner">
                             <div class="p-navigation__tagged-logo">
-                                <a class="p-navigation__link" href="ubucon.org">
+                                <a class="p-navigation__link" href="https://ubucon.org">
                                     <div class="p-navigation__logo-tag">
                                         <img class="p-navigation__logo-icon" src="https://assets.ubuntu.com/v1/82818827-CoF_white.svg" alt="">
                                     </div>
@@ -39,7 +39,7 @@
                             <nav class="p-navigation__nav" aria-label="Example main">
                                 <ul class="p-navigation__items">
                                     <li class="p-navigation__item is-selected">
-                                        <a class="p-navigation__link" href="#">UbuCon</a>
+                                        <a class="p-navigation__link" href="https://ubucon.org">UbuCon</a>
                                     </li>
                                 </ul>
                             </nav>
