--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta property="og:description" content="UbuCons are community led events that bring together Ubuntu teams, users, and organizations from around the world." />
         <meta property="og:image" content="https://ubucon.org/img/map-thumbnail.png" />
         <title>UbuCon - Celebrating the global Ubuntu community</title>
+        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.5.1.min.css" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
