whoops that link only applies for Ubuntu not Ubuntu Conference

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <div class="col">
                         <h2>UbuCons bring the global Ubuntu community together!</h2>
                         <p>
-                            An <a href="https://ubuntu.com/about">Ubuntu Conference</a> 
-                            (often abbreviated to "UbuCon") 
+                            An <a href="https://ubuntu.com/about">Ubuntu</a> 
+                            Conference (often abbreviated to "UbuCon") 
                             is a volunteer run, regional event that enables the global 
                             community of Ubuntu teams, users, and organizations to come 
                             together to work on current challenges, share knowledge, and 
