Fixed typo and small text tweaks

--- a/scale/index.html
+++ b/scale/index.html
@@ -11,7 +11,7 @@
         <meta name="language" content="English">
         <meta property="og:title" content="UbuCon @ SCaLE 22x" />
         <meta property="og:description" content="UbuCon @ SCaLE 22x" />
-        <meta property="og:image" content="https://ubucon.org/na/img/ubucon-banner.png" />
+        <meta property="og:image" content="https://ubucon.org/scale/img/ubucon-banner.png" />
         <title>UbuCon @ SCaLE 22x</title>
         <link rel="icon" type="image/png" sizes="48x48" href="ubuntu.com/static/favicons/COF-favicon-48x48.png?v=fa3c63f">
         <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.8.0.min.css" />
@@ -61,7 +61,7 @@
         <p>
           UbuCon is back in Pasadena at the SCaLE expo for a special one day event featuring the latest innovations happening across the Ubuntu ecosystem!
         </p>
-        <p>Whether you're into the <strong>Ubuntu Desktop, Software Development, AI/ML, Security, Virtualization, or HPC</strong>; there will be something here for you.</p>
+        <p>Whether you're into the <strong>Ubuntu Desktop, Software Development, AI/ML, Security, Virtualization, HPC, or something else</strong>; there will be something here for you.</p>
         <p>
           <a href="#attend"
              class="p-button--positive">Join us</a>
@@ -85,7 +85,7 @@
           <a href="#">
             <h3 class="p-heading--5">Noah Chelliah</h3>
           </a>
-          <p>AskNoah | Altispeed Technologies</p>
+          <p>AskNoah Show | Altispeed Technologies</p>
         </div>
       </div>
       <div class="col-2 p-card">
