Remove empty hrefs from speakers

--- a/scale/index.html
+++ b/scale/index.html
@@ -82,9 +82,7 @@
           <div class="p-card__image">
             <img src="speakers/noah.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Noah Chelliah</h3>
-          </a>
           <p>AskNoah Show | Altispeed Technologies</p>
         </div>
       </div>
@@ -93,9 +91,7 @@
           <div class="p-card__image">
             <img src="speakers/ken.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Ken VanDine</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
@@ -104,9 +100,7 @@
           <div class="p-card__image">
             <img src="speakers/rajan.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Rajan Patel</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
@@ -115,9 +109,7 @@
           <div class="p-card__image">
             <img src="speakers/nathan.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Nathan Haines</h3>
-          </a>
           <p>Ubuntu Community Council</p>
         </div>
       </div>
@@ -126,9 +118,7 @@
           <div class="p-card__image">
             <img src="speakers/alastair.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Alastair Flynn</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
@@ -137,9 +127,7 @@
           <div class="p-card__image">
             <img src="speakers/miona.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Miona Aleksic</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
@@ -150,9 +138,7 @@
           <div class="p-card__image">
             <img src="speakers/richard.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Richard Gaskin</h3>
-          </a>
           <p>Ubuntu California</p>
         </div>
       </div>
@@ -161,9 +147,7 @@
           <div class="p-card__image">
             <img src="speakers/jason.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Jason Nucciarone</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
@@ -172,9 +156,7 @@
           <div class="p-card__image">
             <img src="speakers/aaron.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Aaron Prisk</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
@@ -183,9 +165,7 @@
           <div class="p-card__image">
             <img src="speakers/kadin.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Kadin Sayani</h3>
-          </a>
           <p>Ubuntu</p>
         </div>
       </div>
@@ -194,16 +174,14 @@
           <div class="p-card__image">
              <img src="speakers/eric.jpg" width="150px" />
           </div>
-          <a href="#">
             <h3 class="p-heading--5">Eric Gelinas</h3>
-          </a>
           <p>Canonical</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
-        <a href="#"
+        <a href="schedule.html"
            class="p-button">Full schedule</a>
       </div>
     </div>
