Update tag line

--- a/scale/schedule.html
+++ b/scale/schedule.html
@@ -61,7 +61,7 @@
         <p>
           UbuCon is back in Pasadena at the SCaLE expo for a special one day event featuring the latest innovations happening across the Ubuntu ecosystem!
         </p>
-        <p>Whether you're into the <strong>Ubuntu Desktop, Software Development, AI/ML, Security, Virtualization, or HPC</strong>; there will be something here for you.</p>
+        <p>Whether you're into the <strong>Ubuntu Desktop, Software Development, AI/ML, Security, Virtualization, HPC, or something else</strong>; there will be something here for you.</p>
         <p>
           <a href="index.html#attend"
              class="p-button--positive">Join us</a>
