--- a/scale/schedule.html
+++ b/scale/schedule.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="UbuCon @ SCaLE 22x" />
         <meta property="og:image" content="https://ubucon.org/na/img/ubucon-banner.png" />
         <title>UbuCon @ SCaLE 22x</title>
-        <link rel="icon" type="image/png" sizes="48x48" href="ubuntu.com/static/favicons/COF-favicon-48x48.png?v=fa3c63f">
+        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.8.0.min.css" />
         <script src="main.js"></script>
         <link rel="stylesheet" href="main.css" />
