Update OG metadata description

--- a/scale/schedule.html
+++ b/scale/schedule.html
@@ -10,7 +10,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
         <meta property="og:title" content="UbuCon @ SCaLE 22x" />
-        <meta property="og:description" content="UbuCon @ SCaLE 22x" />
+        <meta property="og:description" content="The biggest open source community at the biggest open source event in North America!" />
         <meta property="og:image" content="https://ubucon.org/na/img/ubucon-banner.png" />
         <title>UbuCon @ SCaLE 22x</title>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
