Fixed speaker affiliation typo

--- a/scale/index.html
+++ b/scale/index.html
@@ -166,7 +166,7 @@
             <img src="speakers/kadin.jpg" width="150px" />
           </div>
             <h3 class="p-heading--5">Kadin Sayani</h3>
-          <p>Ubuntu</p>
+          <p>Canonical</p>
         </div>
       </div>
       <div class="col-2 p-card">
