fix: 12 AM -> 12 PM
Other changes:

* Fix bummy <html> tag in document. It was unclosed :(

Signed-off-by: Jason C. Nucciarone <nuccitheboss@ubuntu.com>

--- a/scale/schedule.html
+++ b/scale/schedule.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <html lang="en">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="UbuCon @ SCaLE 22x">
-        <meta name="keywords" content="ubucon,ubuntu">
-        <meta name="robots" content="index, follow">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="language" content="English">
-        <meta property="og:title" content="UbuCon @ SCaLE 22x" />
-        <meta property="og:description" content="The biggest open source community at the biggest open source event in North America!" />
-        <meta property="og:image" content="https://ubucon.org/na/img/ubucon-banner.png" />
-        <title>UbuCon @ SCaLE 22x</title>
-        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.8.0.min.css" />
-        <script src="main.js"></script>
-        <link rel="stylesheet" href="main.css" />
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="UbuCon @ SCaLE 22x">
+    <meta name="keywords" content="ubucon,ubuntu">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta property="og:title" content="UbuCon @ SCaLE 22x" />
+    <meta property="og:description" content="The biggest open source community at the biggest open source event in North America!" />
+    <meta property="og:image" content="https://ubucon.org/na/img/ubucon-banner.png" />
+    <title>UbuCon @ SCaLE 22x</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.8.0.min.css" />
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="main.css" />
+  </head>
   <header id="navigation" class="p-navigation is-dark">
     <div class="p-navigation__row--25-75">
       <div class="p-navigation__banner">
@@ -130,7 +129,7 @@ Join Ken VanDine and Rajan Patel as they walk us through: <br>
     </tr>
 
     <tr>
-      <td aria-label="time">11:00 - 12:00 AM</td>
+      <td aria-label="time">11:00 - 12:00 PM</td>
       <td aria-label="talk">Build Your Own Cloud: Exploring MicroClouds for Home Labs and Beyond</td>
       <td aria-label="speaker">Miona Aleksic, Eric Gelinas, Kadin Sayani</td>
       <td class="u-align--right">
@@ -341,4 +340,4 @@ for (var i = 0, l = tables.length; i < l; i++) {
   setupExpandableTable(tables[i]);
 }
 </script>
-
+</html>
