--- a/scale/index.html
+++ b/scale/index.html
@@ -170,6 +170,15 @@
     <div class="col-2 p-card">
       <div class="p-card__content">
         <div class="p-card__image">
+          <img src="speakers/erich.jpg" width="150px" />
+        </div>
+          <h3 class="p-heading--5">Erich Eickmeyer</h3>
+        <p>Ubuntu Studio</p>
+      </div>
+    </div>
+    <div class="col-2 p-card">
+      <div class="p-card__content">
+        <div class="p-card__image">
            <img src="speakers/eric.jpg" width="150px" />
         </div>
           <h3 class="p-heading--5">Eric Gelinas</h3>
