--- a/scale/schedule.html
+++ b/scale/schedule.html
@@ -171,7 +171,7 @@ Join us for this session to see how MicroCloud can be useful to you.
     <tr>
       <td aria-label="time">1:00 - 2:00 PM</td>
       <td aria-label="talk">Community Panel / Live AskNoah Show</td>
-      <td aria-label="speaker">Noah Chelliah, Aaron Prisk, Jason Nucciarone, Nathan Haines, Richard Gaskin</td>
+      <td aria-label="speaker">Noah Chelliah, Aaron Prisk, Jason Nucciarone, Nathan Haines, Richard Gaskin, Erich Eickmeyer</td>
       <td class="u-align--right">
         <button class="u-toggle is-dense" aria-controls="expanded-row-4" aria-expanded="false" data-shown-text="Hide" data-hidden-text="Show">Show</button>
       </td>
