--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
                     <div class="col">
                         <h2>UbuCons bring the global Ubuntu community together!</h2>
                         <p>
-                            An <a href="https://ubuntu.com/about">Ubuntu</a> 
-                            Conference (often abbreviated to "UbuCon") 
-                            is a volunteer run, regional event that enables the global 
-                            community of Ubuntu teams, users, and organizations to come 
-                            together to work on current challenges, share knowledge, and 
-                            network within the Ubuntu project. Ubuntu Conferences occur 
-                            across the globe; recent events include 
-                            <a href="https://2023.ubucon.asia/about/">UbuCon Asia 2023</a>, 
-                            <a href="https://2023.ubuntu-kr.org/">UbuCon Korea</a>, 
-                            <a href="https://discourse.ubuntu.com/t/ubuntu-meetup-workshop-in-africa-2023/38728">Ubuntu Meetup Africa 2023</a>, 
-                            <a href="https://ubuconla.org">UbuCon Latin America</a>, and the 
+                            An <a href="https://ubuntu.com/about">Ubuntu</a>
+                            Conference (often abbreviated to "UbuCon")
+                            is a volunteer run, regional event that enables the global
+                            community of Ubuntu teams, users, and organizations to come
+                            together to work on current challenges, share knowledge, and
+                            network within the Ubuntu project. Ubuntu Conferences occur
+                            across the globe; recent events include
+                            <a href="https://2023.ubucon.asia/about/">UbuCon Asia 2023</a>,
+                            <a href="https://2023.ubuntu-kr.org/">UbuCon Korea</a>,
+                            <a href="https://discourse.ubuntu.com/t/ubuntu-meetup-workshop-in-africa-2023/38728">Ubuntu Meetup Africa 2023</a>,
+                            <a href="https://ubuconla.org">UbuCon Latin America</a>, and the
                             <a href="http://summit.ubuntu.com">Ubuntu Summit</a>.
                         </p>
                     </div>
@@ -89,8 +89,23 @@
             <div class="row">
                 <div class="col-12">
                     <div id="map" style="height: 600px;"></div>
-                    <!-- Event table -->
-                    <table id="eventTable">
+                    <!-- Event tables -->
+                    <h2>Upcoming Events</h2>
+                    <table id="upcomingEvents">
+                        <thead>
+                            <tr>
+                                <th>Event Name</th>
+                                <th>Date</th>
+                                <th>Location</th>
+                                <th>URL</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Events will be added here dynamically -->
+                        </tbody>
+                    </table>
+                    <h2>Previous Events</h2>
+                    <table id="previousEvents">
                         <thead>
                             <tr>
                                 <th>Event Name</th>
@@ -104,7 +119,6 @@
                         </tbody>
                     </table>
                     <h3>Event not listed?</h3>
-
                     <div class="p-notification">
                         <p class="p-notification__content">
                             Do you need your UbuCon event listed? Check out the quick guide on our <a href="https://github.com/aaronprisk/ubucon.org">GitHub</a>.
