--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <th>Event Name</th>
                                 <th>Date</th>
                                 <th>Location</th>
-                                <th>URL</th>
+                                <th>Website</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -111,7 +111,7 @@
                                 <th>Event Name</th>
                                 <th>Date</th>
                                 <th>Location</th>
-                                <th>URL</th>
+                                <th>Website</th>
                             </tr>
                         </thead>
                         <tbody>
