--- a/index.html
+++ b/index.html
@@ -64,13 +64,7 @@
                             is a volunteer run, regional event that enables the global
                             community of Ubuntu teams, users, and organizations to come
                             together to work on current challenges, share knowledge, and
-                            network within the Ubuntu project. Ubuntu Conferences occur
-                            across the globe; recent events include
-                            <a href="https://2023.ubucon.asia/about/">UbuCon Asia 2023</a>,
-                            <a href="https://2023.ubuntu-kr.org/">UbuCon Korea</a>,
-                            <a href="https://discourse.ubuntu.com/t/ubuntu-meetup-workshop-in-africa-2023/38728">Ubuntu Meetup Africa 2023</a>,
-                            <a href="https://ubuconla.org">UbuCon Latin America</a>, and the
-                            <a href="http://summit.ubuntu.com">Ubuntu Summit</a>.
+                            network within the Ubuntu project.
                         </p>
                     </div>
                 </div>
