Add link to Community Portal

--- a/index.html
+++ b/index.html
@@ -112,10 +112,16 @@
                             <!-- Events will be added here dynamically -->
                         </tbody>
                     </table>
-                    <h3>Event not listed?</h3>
+                    <h3>Add your UbuCon</h3>
                     <div class="p-notification">
                         <p class="p-notification__content">
                             Do you need your UbuCon event listed? Check out the quick guide on our <a href="https://github.com/aaronprisk/ubucon.org">GitHub</a>.
+                        </p>
+                    </div>
+                    <h3>More Ubuntu events</h3>
+                    <div class="p-notification">
+                        <p class="p-notification__content">
+                            UbuCons are just one of many types of events you can find happening within the Ubuntu Community. You can find more opportunities to meet up with like minded people on the <a href="https://ubuntu.com/community/events">Ubuntu Community Portal</a>.
                         </p>
                     </div>
                 </div>
