--- a/index.html
+++ b/index.html
@@ -118,12 +118,16 @@
                             Do you need your UbuCon event listed? Check out the quick guide on our <a href="https://github.com/aaronprisk/ubucon.org">GitHub</a>.
                         </p>
                     </div>
-                    <h3>More Ubuntu events</h3>
-                    <div class="p-notification">
-                        <p class="p-notification__content">
-                            UbuCons are just one of many types of events you can find happening within the Ubuntu Community. You can find more opportunities to meet up with like minded people on the <a href="https://ubuntu.com/community/events">Ubuntu Community Portal</a>.
-                        </p>
-                    </div>
+                    <hr class="p-rule is-fixed-width">
+                    <section class="p-strip is-deep">
+                    <div class="u-fixed-width">
+                      <p class="p-heading--2">
+                        UbuCons are just one of many types of events you can find happening within the Ubuntu Community. 
+                        <br>
+                        <a href="https://ubuntu.com/community/events">Discover other Ubuntu events around the world</a>
+                      </p>
+                     </div>
+                    </section>
                 </div>
             </div>
         </main>
