--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                         </p>
                     </div>
                     <hr class="p-rule is-fixed-width">
-                    <section class="p-strip is-deep">
+                    <section class="p-strip">
                     <div class="u-fixed-width">
                       <p class="p-heading--2">
-                        UbuCons are just one of many types of events you can find happening within the Ubuntu Community. 
+                        Looking for more events?
                         <br>
                         <a href="https://ubuntu.com/community/events">Discover other Ubuntu events around the world</a>
                       </p>
